https://github.com/pi-engine/guide/issues/1487 Update CropperJS lib + default php crop data (no cropper JS) autorotate + cropper js autorotate

--- a/asset/css/cropper.css
+++ b/asset/css/cropper.css
@@ -1,11 +1,11 @@
 /*!
- * Cropper.js v1.0.0
- * https://github.com/fengyuanchen/cropperjs
+ * Cropper.js v1.4.1
+ * https://fengyuanchen.github.io/cropperjs
  *
- * Copyright (c) 2017 Fengyuan Chen
+ * Copyright 2015-present Chen Fengyuan
  * Released under the MIT license
  *
- * Date: 2017-09-03T12:52:44.102Z
+ * Date: 2018-07-15T09:54:43.167Z
  */
 
 .cropper-container {
@@ -14,15 +14,14 @@
   line-height: 0;
   position: relative;
   -ms-touch-action: none;
-      touch-action: none;
+  touch-action: none;
   -webkit-user-select: none;
-     -moz-user-select: none;
-      -ms-user-select: none;
-          user-select: none
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 .cropper-container img {
-  /* Avoid margin top issue (Occur only when margin-top <= -height) */
   display: block;
   height: 100%;
   image-orientation: 0deg;
@@ -45,7 +44,8 @@
   top: 0;
 }
 
-.cropper-wrap-box {
+.cropper-wrap-box,
+.cropper-canvas {
   overflow: hidden;
 }
 
@@ -72,15 +72,15 @@
   border: 0 dashed #eee;
   display: block;
   opacity: .5;
-  position: absolute
+  position: absolute;
 }
 
 .cropper-dashed.dashed-h {
   border-bottom-width: 1px;
   border-top-width: 1px;
-  height: 33.33333%;
+  height: calc(100% / 3);
   left: 0;
-  top: 33.33333%;
+  top: calc(100% / 3);
   width: 100%;
 }
 
@@ -88,9 +88,9 @@
   border-left-width: 1px;
   border-right-width: 1px;
   height: 100%;
-  left: 33.33333%;
+  left: calc(100% / 3);
   top: 0;
-  width: 33.33333%;
+  width: calc(100% / 3);
 }
 
 .cropper-center {
@@ -100,11 +100,11 @@
   opacity: .75;
   position: absolute;
   top: 50%;
-  width: 0
+  width: 0;
 }
 
 .cropper-center:before,
-  .cropper-center:after {
+.cropper-center:after {
   background-color: #eee;
   content: ' ';
   display: block;
@@ -142,25 +142,25 @@
 }
 
 .cropper-line {
-  background-color: #39f
+  background-color: #39f;
 }
 
 .cropper-line.line-e {
-  cursor: e-resize;
+  cursor: ew-resize;
   right: -3px;
   top: 0;
   width: 5px;
 }
 
 .cropper-line.line-n {
-  cursor: n-resize;
+  cursor: ns-resize;
   height: 5px;
   left: 0;
   top: -3px;
 }
 
 .cropper-line.line-w {
-  cursor: w-resize;
+  cursor: ew-resize;
   left: -3px;
   top: 0;
   width: 5px;
@@ -168,7 +168,7 @@
 
 .cropper-line.line-s {
   bottom: -3px;
-  cursor: s-resize;
+  cursor: ns-resize;
   height: 5px;
   left: 0;
 }
@@ -177,25 +177,25 @@
   background-color: #39f;
   height: 5px;
   opacity: .75;
-  width: 5px
+  width: 5px;
 }
 
 .cropper-point.point-e {
-  cursor: e-resize;
+  cursor: ew-resize;
   margin-top: -3px;
   right: -3px;
   top: 50%;
 }
 
 .cropper-point.point-n {
-  cursor: n-resize;
+  cursor: ns-resize;
   left: 50%;
   margin-left: -3px;
   top: -3px;
 }
 
 .cropper-point.point-w {
-  cursor: w-resize;
+  cursor: ew-resize;
   left: -3px;
   margin-top: -3px;
   top: 50%;
@@ -209,26 +209,26 @@
 }
 
 .cropper-point.point-ne {
-  cursor: ne-resize;
+  cursor: nesw-resize;
   right: -3px;
   top: -3px;
 }
 
 .cropper-point.point-nw {
-  cursor: nw-resize;
+  cursor: nwse-resize;
   left: -3px;
   top: -3px;
 }
 
 .cropper-point.point-sw {
   bottom: -3px;
-  cursor: sw-resize;
+  cursor: nesw-resize;
   left: -3px;
 }
 
 .cropper-point.point-se {
   bottom: -3px;
-  cursor: se-resize;
+  cursor: nwse-resize;
   height: 20px;
   opacity: 1;
   right: -3px;
@@ -236,27 +236,24 @@
 }
 
 @media (min-width: 768px) {
-
   .cropper-point.point-se {
     height: 15px;
-    width: 15px
+    width: 15px;
   }
 }
 
 @media (min-width: 992px) {
-
   .cropper-point.point-se {
     height: 10px;
-    width: 10px
+    width: 10px;
   }
 }
 
 @media (min-width: 1200px) {
-
   .cropper-point.point-se {
     height: 5px;
     opacity: .75;
-    width: 5px
+    width: 5px;
   }
 }
 
@@ -305,4 +302,3 @@
 .cropper-disabled .cropper-point {
   cursor: not-allowed;
 }
-
